[package]
name = "learning_glium"
version = "0.1.0"
authors = ["Luka Mijalkovic <luka.mijalkovic3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
nalgebra = "0.24.1"
nalgebra-glm = "0.9.0"
num = "0.3.1"
glium = "0.29.0"
gltf = "0.15.2"
image = "0.23.12"
rapier3d = { version = "0.5.0", features = [ "simd-stable", "parallel" ] }
legion = "0.3.1"
#New crates for wgpu
# bytemuck = "1.5.0"
# wgpu = "0.7.0"
# winit = "0.24"
# shaderc = "0.7.1"
# futures = "0.3.12"
# #Not sure if these are necessary but they are in the tutorial
# env_logger = "0.7"
# log = "0.4"
